--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rtmp-key-parser",
+  "name": "rtmp-interceptor",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,12 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/spartanz51/rtmp-key-parser.git"
+    "url": "git+https://github.com/spartanz51/rtmp-interceptor.git"
   },
   "author": "spartanz51",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/spartanz51/rtmp-key-parser/issues"
+    "url": "https://github.com/spartanz51/rtmp-interceptor/issues"
   },
-  "homepage": "https://github.com/spartanz51/rtmp-key-parser#readme"
+  "homepage": "https://github.com/spartanz51/rtmp-interceptor#readme"
 }
